tests/src/frontend/syntax/invalid/void_invalid_pattern1.sk
fun shouldFail(v: void): String {
  v match {
  | void -> "I should fail"
  | _ -> "Not today"
  }
}
